Fix valign on list automatically affecting content/image

--- a/src/definitions/elements/list.less
+++ b/src/definitions/elements/list.less
@@ -370,17 +370,20 @@ ol.ui.list ol,
        Aligned
 --------------------*/
 
-.ui.list[class*="top aligned"],
+.ui.list[class*="top aligned"] .image,
+.ui.list[class*="top aligned"] .content,
 .ui.list [class*="top aligned"] {
-  vertical-align: top;
+  vertical-align: top !important;
 }
-.ui.list[class*="middle aligned"],
+.ui.list[class*="middle aligned"] .image,
+.ui.list[class*="middle aligned"] .content,
 .ui.list [class*="middle aligned"] {
-  vertical-align: middle;
+  vertical-align: middle !important;
 }
-.ui.list[class*="bottom aligned"],
+.ui.list[class*="bottom aligned"] .image,
+.ui.list[class*="bottom aligned"] .content,
 .ui.list [class*="bottom aligned"] {
-  vertical-align: bottom;
+  vertical-align: bottom !important;
 }
 
 /*-------------------
